[gd_scene load_steps=8 format=3 uid="uid://c30ahwsiaqioh"]

[ext_resource type="Script" uid="uid://ct3suhsf0l2fu" path="res://Scripts/MiniGameScripts/canvas_layer.gd" id="1_m8psw"]
[ext_resource type="FontFile" uid="uid://duf2yfwdtohl8" path="res://FONTS/retropix.ttf/retropix.ttf" id="2_m8psw"]
[ext_resource type="PackedScene" uid="uid://dmh30ih717tby" path="res://MiniGameTscn/hint_dark1.tscn" id="3_dlsph"]
[ext_resource type="Texture2D" uid="uid://bb3gwc27s1vku" path="res://MiniGameAssets/smallredbutton.png" id="5_0er1l"]
[ext_resource type="Texture2D" uid="uid://cvr5onr70hr2y" path="res://MiniGameAssets/Hint.png" id="5_0pri5"]
[ext_resource type="Texture2D" uid="uid://8rl6u5wr6vsy" path="res://MiniGameAssets/test.png" id="6_0er1l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0er1l"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_m8psw")

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 105.0
offset_top = 68.0
offset_right = 1050.0
offset_bottom = 583.0
color = Color(0.572549, 0.47451, 0.341176, 1)

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 104.0
offset_top = 67.0
offset_right = 1051.0
offset_bottom = 583.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0er1l")

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 347.0
offset_top = 64.0
offset_right = 22958.0
offset_bottom = 4397.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m8psw")
theme_override_font_sizes/font_size = 4000
text = "Hints obtained"

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 135.0
offset_top = 518.0
offset_right = 16479.0
offset_bottom = 4851.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m8psw")
theme_override_font_sizes/font_size = 4000
text = "Password:"

[node name="Hackable" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 574.0
offset_top = 518.0
offset_right = 18884.0
offset_bottom = 4851.0
scale = Vector2(0.01, 0.01)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m8psw")
theme_override_font_sizes/font_size = 4000
text = "Hackable In:"

[node name="Hint1" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = -334.44
offset_top = -50.216
offset_right = -335.192
offset_bottom = -49.848

[node name="Hint2" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = -253.44
offset_top = -50.216
offset_right = -254.192
offset_bottom = -49.848

[node name="Hint3" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = -179.44
offset_top = -50.216
offset_right = -180.192
offset_bottom = -49.848

[node name="Hint4" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = -92.44
offset_top = -50.216
offset_right = -92.5525
offset_bottom = -49.848

[node name="Hint5" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = -6.44
offset_top = -50.216
offset_right = -7.19202
offset_bottom = -49.848

[node name="Hint6" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = 83.56
offset_top = -50.216
offset_right = 82.808
offset_bottom = -49.848

[node name="Hint7" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = 171.56
offset_top = -50.216
offset_right = 170.808
offset_bottom = -49.848

[node name="Hint8" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = 260.56
offset_top = -50.216
offset_right = 259.808
offset_bottom = -49.848

[node name="Hint9" parent="CanvasLayer" instance=ExtResource("3_dlsph")]
offset_left = 345.56
offset_top = -50.216
offset_right = 344.808
offset_bottom = -49.848

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 122.0
offset_top = 501.0
offset_right = 307.0
offset_bottom = 562.0
texture_normal = ExtResource("5_0pri5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/TextureButton"]
layout_mode = 0
offset_left = 40.0
offset_top = 21.0
offset_right = 1149.0
offset_bottom = 184.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m8psw")
theme_override_font_sizes/font_size = 150
text = "Unlock Next Level"

[node name="Quit" type="TextureButton" parent="CanvasLayer"]
offset_left = 974.0
offset_top = 74.0
offset_right = 1044.0
offset_bottom = 128.0
texture_normal = ExtResource("5_0er1l")
ignore_texture_size = true
stretch_mode = 0

[node name="HackTimeEstimate" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 759.0
offset_top = 523.0
offset_right = 3619.0
offset_bottom = 963.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_m8psw")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="CurrentPassword" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 301.0
offset_top = 523.0
offset_right = 2951.0
offset_bottom = 963.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_m8psw")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="ContinueButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 835.0
offset_top = 497.0
offset_right = 1022.0
offset_bottom = 566.0
texture_normal = ExtResource("6_0er1l")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="CanvasLayer/ContinueButton"]
layout_mode = 0
offset_left = 64.0
offset_top = 27.0
offset_right = 1173.0
offset_bottom = 190.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m8psw")
theme_override_font_sizes/font_size = 150
text = "Continue"
